2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-tags):
	Check exixting tags and add to them.

2012-01-02 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-unload): use `with-temp-buffer'.
	(tinydesk--save-title): Remove unknown variable `time'.
	(tinydesk-read-word): Correct `thing-at-point'.

	* tiny/tinydebian.el (tinydebian-bts-mail-compose-macro):
	Fix `mail-setup' for Emacs 24.x.

2012-01-01 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk--save-exclude-regexp): Exclude
	gnus archive files.
	(tinydesk-save-state): Do not show saved buffer. Caused
	splitting fram into windows.

2011-12-31 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinypath.el (tinypath--boot-ignore-directory-regexp):
	Add .git, .bzr, .hg, .mtn.
	(tinypath--load-path-accept-criteria): Adjust docstring.
	(tinypath--load-path-ignore-regexp): Add
	 .git, .bzr, .hg, .mtn.

	* tiny/tinylibm.el (ti::nconc): Correct docstring.

	* tiny/tinydesk.el: (tinydesk-pmin): New.
	(defgroup): Replaced. Was ti::package-defgroup-tiny.
	(tinydesk--directory-location): Check ~/temp and ~/Temp and
	last $HOME before giving up.
	(tinydesk--save-title): Remove ti::* functions.
	(tinydesk-default-mode-bindings): Remove ti::* functions.
	(tinydesk-tmp-buffer): Rewrite.
	(tinydesk-kill-line): New.
	(tinydesk-only-files-region): Remove ti::* functions.
	(tinydesk-file-mode-make-writable): New.
	(tinydesk-expunge-unloaded): Remove ti::* functions.
	(tinydesk-verbose): New.
	(tinydesk-string-match-case): New.
	(tinydesk-file-name-remote-p): New.
	(tinydesk--temp-buffer): Rename. Was `tinydesk--tmp-buffer'.
	(tinydesk--trash-temp-buffer): Rename. Was `tinydesk--trash-tmp-buffer'.
	(tinydesk-nconc): New.
	(tinydesk-read-word): Rewrite.

2011-12-29 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-lisp-mnt-verify): Delete obsolete
	what(1) and RCS from docstring.